--- a/aClient/templates/index.html
+++ b/aClient/templates/index.html
@@ -76,7 +76,7 @@
                 if (response.file_path) {
                     const audioPlayback = document.getElementById("audio-playback");
                     audioPlayback.src = response.file_path;
-
+                    console.log("Audio file path:", response.file_path);
                     updateAvatarState('talking');
 
                     audioPlayback.load();
