correct endpoint in html

--- a/aClient/templates/index.html
+++ b/aClient/templates/index.html
@@ -68,7 +68,7 @@
 
         $.ajax({
             type: "POST",
-            url: "/process_audio",
+            url: "/receive_response",
             data: formData,
             processData: false,
             contentType: false,
