--- a/aClient/templates/index.html
+++ b/aClient/templates/index.html
@@ -76,7 +76,7 @@
                 console.log("AJAX response received:", response);
                 if (response.file_path) {
                     const audioPlayback = document.getElementById("audio-playback");
-                    audioPlayback.src = response.file_path;
+                    audioPlayback.src = window.location.origin + response.file_path;
                     console.log("Audio file path set to:", response.file_path);
 
                     updateAvatarState('talking');
