--- a/aClient/templates/index.html
+++ b/aClient/templates/index.html
@@ -76,8 +76,10 @@
                 console.log("AJAX response received:", response);
                 if (response.file_path) {
                     const audioPlayback = document.getElementById("audio-playback");
-                    audioPlayback.src = 'http://localhost:7000' + response.file_path;
-                    console.log("Audio file path set to:", response.file_path);
+                    audioPlayback.src = '/static/response_a54154fc-6318-4760-8fba-fa75bde8fe02.wav';
+                    console.log("Hardcoded audio file path set to:", audioPlayback.src);
+                    // audioPlayback.src = response.file_path;
+                    // console.log("Audio file path set to:", response.file_path);
 
                     updateAvatarState('talking');
 
