--- a/aClient/templates/index.html
+++ b/aClient/templates/index.html
@@ -110,7 +110,7 @@
     function fetchAndDisplayLogs() {
         $.ajax({
             type: "GET",
-            url: "/get_chat_logs",
+            url: "http://llm:5002/get_chat_logs",
             success: function (logs) {
                 $('#logs').html(logs.join('<br>'));
             },
