--- a/aClient/templates/index.html
+++ b/aClient/templates/index.html
@@ -110,7 +110,7 @@
     function fetchAndDisplayLogs() {
         $.ajax({
             type: "GET",
-            url: "http://10.196.32.21:5002/get_chat_logs",
+            url: "http://localhost:7002/get_chat_logs",
             success: function (logs) {
                 $('#logs').html(logs.join('<br>'));
             },
@@ -121,6 +121,7 @@
     }
 
     setInterval(fetchAndDisplayLogs, 5000); // Fetch logs every 5 seconds
+
 
     function updateAvatarState(state) {
         const avatarImg = document.getElementById('avatar');
