--- a/aClient/templates/index.html
+++ b/aClient/templates/index.html
@@ -26,7 +26,7 @@
 <audio id="welcome-audio" src="/static/welcome.wav" hidden></audio>
 <div class="log-container">
     <h3>Chat Logs</h3>
-    <div id="logs" style="overflow-y: scroll; height: 300px;">
+    <div id="logs">
         <!-- Logs will be displayed here -->
     </div>
 </div>
