--- a/aClient/templates/index.html
+++ b/aClient/templates/index.html
@@ -25,7 +25,7 @@
 <audio id="audio-playback" controls hidden></audio>
 <audio id="welcome-audio" src="/static/welcome.wav" hidden></audio>
 <div class="log-container">
-    <h3>Chat Logs</h3>
+    <h3>Conversation Logs</h3>
     <div id="logs">
         <!-- Logs will be displayed here -->
     </div>
